--- a/concepts/payloads.mdx
+++ b/concepts/payloads.mdx
@@ -12,6 +12,26 @@ Think of it as:
 - The **request body** of an API call
 - The **input** to your system
 
+## Why Payloads
+
+- Speed — One‑click reruns for common cases.
+- Reproducibility — Lock in known‑good inputs as your baseline.
+- Documentation — Show how a component is intended to be used.
+
+## Good Payloads include
+
+- Minimal required fields with realistic values.
+- Edge‑case variants (empty, large, malformed types).
+- Comments or README references for context.
+
+## Workflow
+
+1. Create a Payload for a Node (Action/Flow).
+2. Refine the Node until the output is acceptable.
+3. Keep the Payload as a regression check when you iterate.
+
+> tip: Name by intent — Prefer names like `minimal`, `typical_customer`, `edge_empty_messages` over `test1`, `test2`.
+
 ## Payload structure
 
 ### Basic payload
@@ -541,13 +561,7 @@ Split large payloads into smaller chunks, process sequentially
 }
 ```
 
-**Option 3: Streaming**
-Use streaming APIs for continuous data
-
 ## Next steps
 
-- [Understanding Executions](/concepts/executions)
-- [Understanding Variables](/concepts/variables)
-- [Integrate Project into Your App](/tutorials/integrate-project-into-your-app)
-- [API Reference](/api-reference/introduction)
+Continue exploring the documentation to learn about Executions, Variables, and integrating Projects into your apps.
 
